Video 45 fixes scrollbar and styling issues.

--- a/src/app/toolbox/mesh-manager/mesh-manager.component.scss
+++ b/src/app/toolbox/mesh-manager/mesh-manager.component.scss
@@ -27,4 +27,5 @@
     mat-form-field
     {
         width: 300px;
+        display: block;
     }
